fix: update dev config

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=studentapp.db"
+    "DefaultConnection": "Data Source=usersapp.db"
   },
   "Logging": {
     "LogLevel": {
