feat: auth improvements

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=usersapp.db"
   },
+  "AppSettings": {
+    "Secret": "OUR SECRET FOR JWT - DONT CHANGE THIS STRING"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
