--- a/appsettings.json
+++ b/appsettings.json
@@ -2,8 +2,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=usersapp.db"
   },
-  "AppSettings": {
-    "Secret": "OUR SECRET FOR JWT - DONT CHANGE THIS STRING"
+  "AuthSettings": {
+    "Secret": "4CXBwH1AU7iMa4k9MS0h4qvfrLqVqr4y"
   },
   "Logging": {
     "LogLevel": {
@@ -13,5 +13,5 @@
     }
   },
   "AllowedHosts": "*",
-  "Urls": "http://localhost:5006"
+  "Urls": "http://localhost:5007"
 }
